make <main> responsive on mobile, repairing jquery for mobile

--- a/version/AssistantUnion/style.css
+++ b/version/AssistantUnion/style.css
@@ -66,3 +66,14 @@
 article {
     padding: 10px;
 }
+
+@media only screen and (max-width: 640px) {
+    
+        #jedy-knight>aside{
+            display:none;
+        }
+        #jedy-knight > div {
+            width:97%;
+            float:left;
+        }
+}
